<resources>
    <string name="app_name">MascotaRuta</string>
    <string name="edtingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="edtingresa_nombre_de_la_mascota">Ingresa nombre de la mascota</string>
    <string name="txtcategoria">Categoria:</string>
    <string name="rdfelino">Felino</string>
    <string name="rdcanino">Canino</string>
    <string name="rdotro">Otro</string>
    <string name="cbesterilizacion">Esterilizacion</string>
    <string name="txtdetalles">Detalles</string>
    <string name="cbseguimiento">Seguimiento</string>
    <string name="btnregistrar">Registrar</string>
    <string name="swvacunas_al_dia">¿Vacunas al dia?</string>
</resources>