<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarMascotaActivity">

    <TextView
        android:id="@+id/txtTItuloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Registrar Mascota"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edtNombrePersona"
        android:layout_width="228dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edtingresa_tu_nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTItuloRegistro" />

    <EditText
        android:id="@+id/edtNombreMascota"
        android:layout_width="252dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edtingresa_nombre_de_la_mascota"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombrePersona" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/txtcategoria"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreMascota" />

    <RadioGroup
        android:id="@+id/rgCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoria">

        <RadioButton
            android:id="@+id/rbCanino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdfelino"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbFelino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdcanino"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbOtro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdotro" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbEsterilizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cbesterilizacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetalles" />

    <TextView
        android:id="@+id/txtDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/txtdetalles"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgCategoria" />

    <CheckBox
        android:id="@+id/cbSeguimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbseguimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbEsterilizacion" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/btnregistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swVacunas" />

    <Switch
        android:id="@+id/swVacunas"
        android:layout_width="251dp"
        android:layout_height="67dp"
        android:layout_marginTop="12dp"
        android:text="@string/swvacunas_al_dia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSeguimiento"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>